fonts added and stylesheet updated

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <link rel="stylesheet" href="/stylesheet.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Livvic:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap" rel="stylesheet">
   <title>Lavender Fields in Provence</title>
 </head>
 <body>
   <header id="site-header">
-    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExN3hrMWMyNHB4cTE3cnhncGtuNWlxcG0xd21venE3dzIydTlpbWs2YyZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/qy6hoztGkGnmkPKyZF/giphy.gif" alt="moving sticker of a lavander bunch" width="80px">
+    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExN3hrMWMyNHB4cTE3cnhncGtuNWlxcG0xd21venE3dzIydTlpbWs2YyZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/qy6hoztGkGnmkPKyZF/giphy.gif" alt="moving sticker of a lavander bunch" width="60px">
     <nav aria-label="Main site navigation">
       <ul>
         <li>My visit</li>
