creating photo gallery with flexbox

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
           <p>Beyond my expectations - Do you know when you see pictures of a place, and once you get there it exceeds all your expectations? Well, that is what happened to me during my trip to the lavender fields in Provence, France. This purple dream came true.</p>
         </article>
         <!-- image gallery with semantic figure/figcaption -->
-        <div>
+        <div id="gallery">
+          div.first
           <figure>
             <img class="img-main" src="./img/IMG_1620.jpg" alt="Lavender field with mountain view">
             <figcaption>Ferrasiers lavender fields</figcaption>
