added slider for the gallery section

--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
         </article>
         <!-- image gallery with semantic figure/figcaption -->
         <div id="gallery">
-          div.first
-          <figure>
-            <img class="img-main" src="./img/IMG_1620.jpg" alt="Lavender field with mountain view">
-            <figcaption>Ferrasiers lavender fields</figcaption>
-          </figure>
+          <!-- top horizontal container -->
+          <div class="first">
+            <figure>
+              <img class="img-main" src="./img/IMG_1620.jpg" alt="Lavender field with mountain view">
+              <figcaption>Ferrasiers lavender fields</figcaption>
+            </figure>
+          </div>
 
+          <!-- middle photo container -->
           <figure>
           <img class="img-main" src="./img/IMG_1629.jpg" alt="Lavender field close-up">
           <figcaption>Ferrasiers lavender fields</figcaption>
@@ -50,6 +53,7 @@
           <figcaption>Ferrasiers lavender fields</figcaption>
           </figure>
 
+          
           <figure>
           <img class="img-main" src="./img/IMG_1683.jpg" alt="Rows of lavender bushes">
           <figcaption>Aurel lavender fields</figcaption>
