changes to flexbox gallery

--- a/gallery-big.html
+++ b/gallery-big.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/stylesheet.css">
+  <link rel="stylesheet" href="/gallery-big.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Livvic:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap" rel="stylesheet">
   <title>Document</title>
 </head>
 <body>
@@ -17,26 +20,28 @@
     </div>
 
     <!-- middle photo container -->
-    <figure>
-    <img class="img-main" src="./img/IMG_1629.jpg" alt="Lavender field close-up">
-    <figcaption>Ferrasiers lavender fields</figcaption>
-    </figure>
+    <div class="middle">
+      <figure>
+      <img class="img-main" src="./img/IMG_1629.jpg" alt="Lavender field close-up">
+      <figcaption>Ferrasiers lavender fields</figcaption>
+      </figure>
 
-    <figure>
-    <img class="img-main" src="./img/IMG_1679.jpg" alt="Lavender field sign">
-    <figcaption>Ferrasiers lavender fields</figcaption>
-    </figure>
+      <figure>
+      <img class="img-main" src="./img/IMG_1679.jpg" alt="Lavender field sign">
+      <figcaption>Ferrasiers lavender fields</figcaption>
+      </figure>
+    </div>
 
-
-    <figure>
+    <div class="bottom">
+      <figure>
     <img class="img-main" src="./img/IMG_1683.jpg" alt="Rows of lavender bushes">
     <figcaption>Aurel lavender fields</figcaption>
-    </figure>
-
-    <figure>
-    <img class="img-main" src="./img/IMG_1693.jpg" alt="Lavender field in Aurel with mountains and tree in the background">
-    <figcaption>Aurel lavender fields</figcaption>
-    </figure>
+      </figure>
+    </div>
+      <!-- <figure hidden>
+      <img class="img-main" src="./img/IMG_1693.jpg" alt="Lavender field in Aurel with mountains and tree in the background">
+      <figcaption>Aurel lavender fields</figcaption>
+      </figure> -->
   </div>
 
 </body>
