applying naming convention BEM to HTML and CSS files

--- a/gallery-big.html
+++ b/gallery-big.html
@@ -10,31 +10,31 @@
   <title>Document</title>
 </head>
 <body>
-  <div id="gallery">
+  <div class="gallery">
     <!-- top horizontal container -->
-    <div class="first">
+    <div class="gallery-top">
       <figure>
-        <img class="img-main" src="./img/IMG_1620.jpg" alt="Lavender field with mountain view">
+        <img class="gallery-img" src="./img/IMG_1620.jpg" alt="Lavender field with mountain view">
         <figcaption>Ferrasiers lavender fields</figcaption>
       </figure>
     </div>
 
     <!-- middle photo container -->
-    <div class="middle">
+    <div class="gallery-middle">
       <figure>
-      <img class="img-main" src="./img/IMG_1629.jpg" alt="Lavender field close-up">
+      <img class="gallery-img" src="./img/IMG_1629.jpg" alt="Lavender field close-up">
       <figcaption>Ferrasiers lavender fields</figcaption>
       </figure>
 
       <figure>
-      <img class="img-main" src="./img/IMG_1679.jpg" alt="Lavender field sign">
+      <img class="gallery-img" src="./img/IMG_1679.jpg" alt="Lavender field sign">
       <figcaption>Ferrasiers lavender fields</figcaption>
       </figure>
     </div>
 
-    <div class="bottom">
+    <div class="gallery-bottom">
       <figure>
-    <img class="img-main" src="./img/IMG_1683.jpg" alt="Rows of lavender bushes">
+    <img class="gallery-img" src="./img/IMG_1683.jpg" alt="Rows of lavender bushes">
     <figcaption>Aurel lavender fields</figcaption>
       </figure>
     </div>
